# jbkv

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
CMake/: common.txt
core/: CMakeLists.txt  hello-world  node.pb.cc  saveload.h  volume.cpp  volume.h
core/volume/: CMakeLists.txt  node.pb.h  node.proto  volume.cpp  volume.h
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  hello-world
lib/: jbkv.h  node.h  node_data.h  noncopyable.h  storage_node.cpp  storage_node.h  value.cpp  value.h  volume.cpp  volume.h  volume_io.cpp  volume_io.h  volume_node.cpp  volume_node.h
tests/: func.cpp  stress.cpp  unit.cpp
vs/: vs.sln  vs.vcxproj  vs.vcxproj.filters
